--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,33 +20,33 @@
             <h2>Le mie spese</h2>
             <table>
                 <thead>
-                    <td><b>Numero</b></td>
-                    <td><b>Descrizione</b></td>
-                    <td><b>Costo</b></td>
+                    <tr>
+                        <th><b>Numero</b></th>
+                        <th><b>Descrizione</b></th>
+                        <th><b>Costo</b></th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <td>
-                        <tr>
-                            <td>1</td>
-                            <td>Biglietto Aereo</td>
-                            <td>120€</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>Biglietto Aereo</td>
-                            <td>120€</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>Biglietto Aereo</td>
-                            <td>120€</td>
-                        </tr>
-                        <tr>
-                            <td>Totale</td>
-                            <td></td>
-                            <td>360€</td>
-                        </tr>
-                    </td>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
